scrollbar fix

--- a/public/css/application.css
+++ b/public/css/application.css
@@ -39,9 +39,7 @@ body section#content {
   display: none;
   position: relative;
   margin: 0px auto;
-  overflow: auto;
-  height: 100%;
-  min-height: 100%;}
+  overflow: auto;}
 body section#content div#pastes {
   margin: 0px auto;
   width: 90%;
@@ -79,11 +77,3 @@ body section#content div#pastes .paste div.info .date a {
   font-size: 0.8em;
   text-align: right;}
 
-
-#new {
-  padding: 10px;}
-#new div {
-  padding: 10px;}
-#new textarea {
-  width: 100%;
-  height: 100%;}
